force-app/main/default/objects/Proposal__c/Proposal__c.object-meta.xml
<CustomObject>
    <description>Versioned proposals for Social Events — created via guided Screen Flow</description>
    <label>Proposal</label>
    <nameField>
        <displayFormat>PROP-{0000}</displayFormat>
        <label>Proposal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>