force-app/main/default/objects/Proposal__c/fields/Budget_Band__c.field-meta.xml
<CustomField>
    <fullName>Budget_Band__c</fullName>
    <label>Client Budget Band</label>
    <length>100</length>
    <type>Text</type>
</CustomField>