force-app/main/default/objects/Proposal__c/fields/Built_By__c.field-meta.xml
<CustomField>
    <fullName>Built_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Built By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Proposals Built</relationshipLabel>
    <relationshipName>Proposals_Built</relationshipName>
    <type>Lookup</type>
</CustomField>