force-app/main/default/objects/Proposal__c/fields/Confirmed_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Event_Date__c</fullName>
    <label>Confirmed Event Start Date</label>
    <type>Date</type>
</CustomField>