force-app/main/default/objects/Proposal__c/fields/Confirmed_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Event_End_Date__c</fullName>
    <label>Confirmed Event End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>