force-app/main/default/objects/Proposal__c/fields/Date_Built__c.field-meta.xml
<CustomField>
    <fullName>Date_Built__c</fullName>
    <label>Date Built</label>
    <type>Date</type>
</CustomField>