force-app/main/default/objects/Proposal__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Social Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>