force-app/main/default/objects/Proposal__c/fields/Event_Type_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Confirmed__c</fullName>
    <label>Confirmed Event Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>