force-app/main/default/objects/Proposal__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <label>Confirmed Guest Headcount</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>