force-app/main/default/objects/Proposal__c/fields/Must_Avoid__c.field-meta.xml
<CustomField>
    <fullName>Must_Avoid__c</fullName>
    <description>Dietary, cultural, and personal restrictions</description>
    <label>Must-Avoid Elements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>