force-app/main/default/objects/Proposal__c/fields/Must_Have__c.field-meta.xml
<CustomField>
    <fullName>Must_Have__c</fullName>
    <label>Must-Have Elements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>