force-app/main/default/objects/Proposal__c/fields/Venue_Pref__c.field-meta.xml
<CustomField>
    <fullName>Venue_Pref__c</fullName>
    <label>Venue Preference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>