force-app/main/default/objects/Proposal__c/fields/venue_preference__c.field-meta.xml
<CustomField>
    <fullName>venue_preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Venue__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Retired</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Proposals</relationshipLabel>
    <relationshipName>Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>