force-app/main/default/objects/Proposal__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Auto-incremented by Flow on each new proposal</description>
    <label>Version Number</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>